--- a/patch.cabal
+++ b/patch.cabal
@@ -1,7 +1,6 @@
 Name: patch
 Version: 0.0.0.0
-Synopsis: TODO
-Description: TODO
+Synopsis: Infrastructure for writing patches which act on other types.
 License: BSD3
 License-file: LICENSE
 Author: Ryan Trinkle
