patch.cabal: Synopsis -> Description
I guess the rule is only include Synopsis when the description is long.

--- a/patch.cabal
+++ b/patch.cabal
@@ -1,6 +1,6 @@
 Name: patch
 Version: 0.0.0.1
-Synopsis: Infrastructure for writing patches which act on other types.
+Description: Infrastructure for writing patches which act on other types.
 License: BSD3
 License-file: LICENSE
 Author: Ryan Trinkle
