--- a/patch.cabal
+++ b/patch.cabal
@@ -44,6 +44,7 @@ library
                  , Data.Patch.Class
                  , Data.Patch.DMap
                  , Data.Patch.DMapWithMove
+                 , Data.Patch.DMapWithMove.By
                  , Data.Patch.DMapWithReset
                  , Data.Patch.IntMap
                  , Data.Patch.Map
