--- a/patch.cabal
+++ b/patch.cabal
@@ -40,6 +40,7 @@ library
                , witherable >= 0.3 && < 0.3.2
 
   exposed-modules: Data.Functor.Misc
+                 , Data.Monoid.DecidablyEmpty
                  , Data.Patch
                  , Data.Patch.Class
                  , Data.Patch.DMap
