--- a/patch.cabal
+++ b/patch.cabal
@@ -32,6 +32,7 @@ flag split-these
 
 library
   hs-source-dirs: src
+  default-language: Haskell2010
   build-depends: base >= 4.9 && < 4.14
                , constraints-extras >= 0.3 && < 0.4
                , containers >= 0.6 && < 0.7
@@ -64,6 +65,7 @@ library
                  , monoidal-containers == 0.4.0.0
 
 test-suite hlint
+  default-language: Haskell2010
   type: exitcode-stdio-1.0
   main-is: hlint.hs
   hs-source-dirs: test
