--- a/patch.cabal
+++ b/patch.cabal
@@ -64,6 +64,19 @@ library
     build-depends: these >= 0.4 && <0.9
                  , monoidal-containers == 0.4.0.0
 
+test-suite tests
+  default-language: Haskell2010
+  type: exitcode-stdio-1.0
+  main-is: tests.hs
+  hs-source-dirs: test
+  build-depends: base
+               , patch
+               , containers
+               , hedgehog
+               , HUnit
+  if impl(ghcjs)
+    buildable: False
+
 test-suite hlint
   default-language: Haskell2010
   type: exitcode-stdio-1.0
