--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -43,3 +43,5 @@ jobs:
       run: cabal build --enable-tests --enable-benchmarks all
     - name: Run tests
       run: cabal test all
+    - name: Build Docs
+      run: cabal haddock
