Pull `Additive` into its own module
The getting base-orphans instances indirectly via monoidal is a sin we
were already committing. It is just properly documented now. I would
rather fix it separately.

--- a/patch.cabal
+++ b/patch.cabal
@@ -53,6 +53,7 @@ library
                  , Data.Patch.Map
                  , Data.Patch.MapWithMove
                  , Data.Patch.MapWithPatchingMove
+                 , Data.Semigroup.Additive
 
   ghc-options: -Wall -fwarn-redundant-constraints -fwarn-tabs
   default-extensions: PolyKinds
