--- a/patch.cabal
+++ b/patch.cabal
@@ -30,6 +30,11 @@ flag split-these
   manual:      False
   default:     True
 
+flag lens
+  description: Use split these/semialign packages
+  manual:      False
+  default:     True
+
 library
   hs-source-dirs: src
   default-language: Haskell2010
@@ -42,6 +47,10 @@ library
                , semigroupoids >= 4.0 && < 6
                , transformers >= 0.5.6.0 && < 0.6
                , witherable >= 0.3 && < 0.5
+               , indexed-traversable
+  if flag(lens)
+    build-depends:
+      lens >= 4.7 && < 5
 
   if impl(ghc < 8.6) -- really, if base < 8.12
     build-depends: base-orphans >= 0.8 && < 0.9
