--- a/patch.cabal
+++ b/patch.cabal
@@ -25,6 +25,11 @@ tested-with:
   GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.1
   GHCJS ==8.4
 
+flag split-these
+  description: Use split these/semialign packages
+  manual:      False
+  default:     True
+
 library
   hs-source-dirs: src
   default-language: Haskell2010
@@ -35,7 +40,6 @@ library
                , dependent-sum >= 0.6 && < 0.8
                , lens >= 4.7 && < 5
                , semigroupoids >= 4.0 && < 6
-               , these >= 0.4 && < 1.2
                , transformers >= 0.5.6.0 && < 0.6
                , witherable >= 0.3 && < 0.5
 
@@ -56,6 +60,12 @@ library
 
   ghc-options: -Wall -fwarn-redundant-constraints -fwarn-tabs
   default-extensions: PolyKinds
+
+  if flag(split-these)
+    build-depends: these >= 1 && <1.2
+                 , semialign >=1 && <1.2
+  else
+    build-depends: these >= 0.4 && <0.9
 
 test-suite tests
   default-language: Haskell2010
