--- a/patch.cabal
+++ b/patch.cabal
@@ -37,6 +37,7 @@ library
                , constraints-extras >= 0.3 && < 0.4
                , commutative-semigroups >= 0.0 && < 0.1
                , containers >= 0.6 && < 0.7
+               , groups >= 0.5.4 && < 0.6
                , dependent-map >= 0.3 && < 0.5
                , dependent-sum >= 0.6 && < 0.8
                , lens >= 4.7 && < 5
