--- a/patch.cabal
+++ b/patch.cabal
@@ -38,7 +38,8 @@ library
                , containers >= 0.6 && < 0.7
                , dependent-map >= 0.3 && < 0.5
                , dependent-sum >= 0.6 && < 0.8
-               , lens >= 4.7 && < 5
+               , lens >= 4.7 && < 5.1
+               , indexed-traversable >= 0.1 && < 0.2
                , semigroupoids >= 4.0 && < 6
                , transformers >= 0.5.6.0 && < 0.6
                , witherable >= 0.3 && < 0.5
