--- a/patch.cabal
+++ b/patch.cabal
@@ -30,6 +30,10 @@ flag split-these
   manual:      False
   default:     True
 
+flag hlint
+  description: Enable hlint test
+  default:     True
+
 library
   hs-source-dirs: src
   default-language: Haskell2010
@@ -95,7 +99,7 @@ test-suite hlint
                , filepath
                , filemanip
                , hlint (< 2.1 || >= 2.2.2) && < 3.5
-  if impl(ghcjs)
+  if impl(ghcjs) || !flag(hlint)
     buildable: False
 
 source-repository head
