--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -5,6 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     strategy:
+      fail-fast: false
       matrix:
         ghc: ['8.0.2', '8.2.2', '8.4.4', '8.6.5', '8.8.4', '8.10.7', '9.0.1', '9.2.2']
         os: ['ubuntu-latest', 'macos-latest']
