--- a/patch.cabal
+++ b/patch.cabal
@@ -103,7 +103,7 @@ test-suite hlint
   else
     build-depends: hlint >= 3.5 && < 3.6
 
-  if impl(ghcjs) || !flag(hlint)
+  if impl(ghcjs) || !flag(hlint) || os(darwin) && impl(ghc >= 9.2) && impl(ghc < 9.4)
     buildable: False
 
 source-repository head
