--- a/patch.cabal
+++ b/patch.cabal
@@ -1,5 +1,5 @@
 Name: patch
-Version: 0.0.8.0
+Version: 0.0.8.1
 Synopsis: Data structures for describing changes to other data structures.
 Description:
   Data structures for describing changes to other data structures.
@@ -22,8 +22,8 @@ extra-source-files:
   ChangeLog.md
 
 tested-with:
-  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.2
-  GHCJS ==8.4
+  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.5 || ==9.4.3
+  GHCJS ==8.6 || ==8.10
 
 flag split-these
   description: Use split these/semialign packages
@@ -37,13 +37,13 @@ flag hlint
 library
   hs-source-dirs: src
   default-language: Haskell2010
-  build-depends: base >= 4.9 && < 4.17
+  build-depends: base >= 4.9 && < 4.18
                , constraints-extras >= 0.3 && < 0.5
                , commutative-semigroups >= 0.0 && < 0.2
                , containers >= 0.6 && < 0.7
                , dependent-map >= 0.3 && < 0.5
                , dependent-sum >= 0.6 && < 0.8
-               , lens >= 4.7 && < 5.2
+               , lens >= 4.7 && < 5.3
                , indexed-traversable >= 0.1 && < 0.2
                , semigroupoids >= 4.0 && < 6
                , transformers >= 0.5.6.0 && < 0.7
@@ -98,7 +98,11 @@ test-suite hlint
                , directory
                , filepath
                , filemanip
-               , hlint (< 2.1 || >= 2.2.2) && < 3.5
+  if impl(ghc < 9.2)
+    build-depends: hlint (< 2.1 || >= 2.2.2) && < 3.5
+  else
+    build-depends: hlint >= 3.5 && < 3.6
+
   if impl(ghcjs) || !flag(hlint)
     buildable: False
 
