--- a/patch.cabal
+++ b/patch.cabal
@@ -1,5 +1,5 @@
 Name: patch
-Version: 0.0.8.1
+Version: 0.0.8.2
 Synopsis: Data structures for describing changes to other data structures.
 Description:
   Data structures for describing changes to other data structures.
@@ -22,7 +22,7 @@ extra-source-files:
   ChangeLog.md
 
 tested-with:
-  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.5 || ==9.4.3
+  GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1 || ==9.2.5 || ==9.4.5 || ==9.6.1
   GHCJS ==8.6 || ==8.10
 
 flag split-these
@@ -37,7 +37,7 @@ flag hlint
 library
   hs-source-dirs: src
   default-language: Haskell2010
-  build-depends: base >= 4.9 && < 4.18
+  build-depends: base >= 4.9 && < 4.19
                , constraints-extras >= 0.3 && < 0.5
                , commutative-semigroups >= 0.0 && < 0.2
                , containers >= 0.6 && < 0.7
@@ -90,6 +90,9 @@ test-suite tests
     buildable: False
 
 test-suite hlint
+  -- hlint doesn't support ghc-9.6 yet (as of version 3.5)
+  if impl(ghc >= 9.6)
+    buildable: False
   default-language: Haskell2010
   type: exitcode-stdio-1.0
   main-is: hlint.hs
