--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -17,6 +17,7 @@ jobs:
     - uses: haskell/actions/setup@v1
       with:
         ghc-version: ${{ matrix.ghc }}
+        cabal-version: '3.10.1.0'
     - name: Cache
       uses: actions/cache@v3
       env:
