--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -38,5 +38,7 @@ jobs:
     - name: Run tests
       # We don't run hlint tests, because different versions of hlint have different suggestions, and we don't want to worry about satisfying them all.
       run: cabal test --enable-tests -f-hlint all
-    - name: Build Docs
+    - if: matrix.ghc != '8.4.4'
+      # docs aren't built on ghc 8.4.4 because some dependency docs don't build on older GHCs
+      name: Build Docs
       run: cabal haddock
