--- a/patch.cabal
+++ b/patch.cabal
@@ -49,7 +49,7 @@ library
                , transformers >= 0.5.6.0 && < 0.7
                , witherable >= 0.3 && < 0.5
 
-  if impl(ghc < 8.6) -- really, if base < 8.12
+  if impl(ghc < 8.6)
     build-depends: base-orphans >= 0.8 && < 0.9
 
   exposed-modules: Data.Functor.Misc
